--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <p class="lead mb-4">Your complete digital solution for farming, finance, and market access - all in one platform.</p>
                     <div class="d-flex gap-3">
                         <a href="registration.html" class="btn btn-success btn-lg px-4">Join Now</a>
-                        <a href="#features" class="btn btn-outline-success btn-lg px-4">Learn More</a>
+                        <a href="features.html" class="btn btn-outline-success btn-lg px-4">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -144,7 +144,6 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="testimonial-card p-4 text-center">
-                                    <img src="images/farmer1.jpg" class="rounded-circle mb-3" width="100" alt="Farmer">
                                     <p class="mb-3">"AgriTech helped me get a loan to buy quality seeds. My yield increased by 40% and I sold directly to buyers through their platform."</p>
                                     <h5>Abdul Rahman</h5>
                                     <p class="text-muted">Rice Farmer, Bogura</p>
@@ -152,7 +151,6 @@
                             </div>
                             <div class="carousel-item">
                                 <div class="testimonial-card p-4 text-center">
-                                    <img src="images/farmer2.jpg" class="rounded-circle mb-3" width="100" alt="Farmer">
                                     <p class="mb-3">"The AI price predictions helped me time my sales perfectly. I earned 25% more than my neighbors who sold at the local market."</p>
                                     <h5>Fatema Begum</h5>
                                     <p class="text-muted">Vegetable Farmer, Comilla</p>
@@ -178,7 +176,7 @@
             <p class="lead mb-4">Join thousands of farmers who are already benefiting from AgriTech</p>
             <div class="d-flex justify-content-center gap-3">
                 <a href="registration.html" class="btn btn-light btn-lg px-4">Sign Up Free</a>
-                <a href="#contact" class="btn btn-outline-light btn-lg px-4">Contact Us</a>
+                <a href="contact.html" class="btn btn-outline-light btn-lg px-4">Contact Us</a>
             </div>
         </div>
     </section>
