--- a/farmerdashboard.html
+++ b/farmerdashboard.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="../CSS/farmer-dashboard.css">
 </head>
 <body>
-    <div id="navbar-container"></div>
-
+    <div id="farmer-navbar-container"></div>
     <!-- Farmer Dashboard -->
     <section class="farmer-dashboard py-5">
         <div class="container">
@@ -154,10 +153,9 @@
         </div>
     </section>
 
-    <div id="footer-container"></div>
+    <div id="farmer-footer-container"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../JavaScript/script.js"></script>
-    <script src="../JavaScript/farmerdashboard.js"></script>
+    <script src="JavaScript/farmerscript.js"></script>
 </body>
 </html>
