--- a/investorloans.html
+++ b/investorloans.html
@@ -7,8 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/investor-loans.css">
+    <link rel="stylesheet" href="CSS/investorloans.css">
 </head>
 <body>
     <div id="navbar-container"></div>
@@ -157,7 +156,7 @@
     <div id="footer-container"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../JavaScript/script.js"></script>
-    <script src="../JavaScript/investor-loans.js"></script>
+    <script src="JavaScript/investorscript.js"></script>
+    <script src="JavaScript/investorloans"></script>
 </body>
 </html>
