--- a/checkout.html
+++ b/checkout.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/checkout.css">
+    <style>
+        body {
+            padding-top: 0 !important;
+        }
+    </style>
 </head>
 <body>
     <div id="navbar-container"></div>
