--- a/logistics.html
+++ b/logistics.html
@@ -89,25 +89,13 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="map-sidebar">
-                        <h4 class="mb-4">Active Shipments <span class="badge bg-primary">247 Live</span></h4>
-                        <div class="shipment-list">
-                            <div class="shipment-item">
-                                <div class="shipment-meta">
-                                    <span class="badge bg-success">In Transit</span>
-                                    <small>#SH-789456</small>
+                        <h4 class="mb-4">Active Shipments <span id="activeShipmentsCount" class="badge bg-primary">Loading...</span></h4>
+                        <div id="shipmentList" class="shipment-list">
+                            <div class="text-center py-4">
+                                <div class="spinner-border text-primary" role="status">
+                                    <span class="visually-hidden">Loading...</span>
                                 </div>
-                                <div class="shipment-route">
-                                    Rangpur → Dhaka
-                                </div>
-                                <div class="shipment-progress">
-                                    <div class="progress">
-                                        <div class="progress-bar" style="width: 65%"></div>
-                                    </div>
-                                    <small>ETA: 2h 15m</small>
-                                </div>
-                                <button class="btn btn-sm btn-outline-primary mt-2">Track</button>
                             </div>
-                            <!-- More shipment items would load here via JS -->
                         </div>
                         <div class="mt-3">
                             <button class="btn btn-success w-100" data-bs-toggle="modal" data-bs-target="#trackShipmentModal">
@@ -132,52 +120,46 @@
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <label class="form-label">From</label>
-                                <select class="form-select">
-                                    <option>Select District</option>
-                                    <option>Rangpur</option>
-                                    <option>Dhaka</option>
-                                    <option>Chittagong</option>
+                                <select id="fromDistrict" class="form-select">
+                                    <option value="">Loading districts...</option>
                                 </select>
                             </div>
                             <div class="col-md-6">
                                 <label class="form-label">To</label>
-                                <select class="form-select">
-                                    <option>Select District</option>
-                                    <option>Dhaka</option>
-                                    <option>Chittagong</option>
-                                    <option>Sylhet</option>
+                                <select id="toDistrict" class="form-select">
+                                    <option value="">Loading districts...</option>
                                 </select>
                             </div>
                             <div class="col-md-4">
                                 <label class="form-label">Product Type</label>
-                                <select class="form-select">
-                                    <option>Vegetables</option>
-                                    <option>Fruits</option>
-                                    <option>Grains</option>
-                                    <option>Dairy</option>
+                                <select id="productType" class="form-select">
+                                    <option value="vegetables">Vegetables</option>
+                                    <option value="fruits">Fruits</option>
+                                    <option value="grains">Grains</option>
+                                    <option value="dairy">Dairy</option>
                                 </select>
                             </div>
                             <div class="col-md-4">
                                 <label class="form-label">Weight (kg)</label>
-                                <input type="number" class="form-control" value="50">
+                                <input id="weight" type="number" class="form-control" value="50" min="1">
                             </div>
                             <div class="col-md-4">
                                 <label class="form-label">Urgency</label>
-                                <select class="form-select">
-                                    <option>Standard (3 days)</option>
-                                    <option>Express (24h)</option>
-                                    <option>Same Day</option>
+                                <select id="urgency" class="form-select">
+                                    <option value="standard">Standard (3 days)</option>
+                                    <option value="express">Express (24h)</option>
+                                    <option value="same-day">Same Day</option>
                                 </select>
                             </div>
                         </div>
                         <div class="result-box mt-4 p-3 bg-primary text-white rounded">
                             <div class="d-flex justify-content-between">
                                 <h4 class="mb-0">Estimated Cost:</h4>
-                                <h4 class="mb-0">৳1,250</h4>
+                                <h4 id="estimatedCost" class="mb-0">৳---</h4>
                             </div>
                             <small class="d-block mt-1">Includes all fees and insurance</small>
                         </div>
-                        <button class="btn btn-success w-100 mt-3">
+                        <button id="bookShipmentBtn" class="btn btn-success w-100 mt-3">
                             <i class="fas fa-truck-fast me-2"></i> Book This Shipment
                         </button>
                     </div>
@@ -200,7 +182,7 @@
                         <ul>
                             <li><i class="fas fa-check-circle"></i> 1-7 day storage</li>
                             <li><i class="fas fa-check-circle"></i> Daily quality checks</li>
-                            <li><i class="fas fa-check-circle"></i> ৳40/kg</li>
+                            <li><i class="fas fa-check-circle"></i> <span class="storage-price">৳40/kg</span></li>
                         </ul>
                         <button class="btn btn-outline-primary">Reserve Space</button>
                     </div>
@@ -212,7 +194,7 @@
                         <ul>
                             <li><i class="fas fa-check-circle"></i> Up to 6 months</li>
                             <li><i class="fas fa-check-circle"></i> Climate controlled</li>
-                            <li><i class="fas fa-check-circle"></i> ৳25/kg/month</li>
+                            <li><i class="fas fa-check-circle"></i> <span class="storage-price">৳25/kg/month</span></li>
                         </ul>
                         <button class="btn btn-primary">Reserve Space</button>
                     </div>
@@ -232,6 +214,66 @@
         </div>
     </section>
 
+    <!-- Book Delivery Modal -->
+    <div class="modal fade" id="bookDeliveryModal" tabindex="-1">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header bg-success text-white">
+                    <h5 class="modal-title">Book New Delivery</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="deliveryForm">
+                        <div class="row g-3">
+                            <div class="col-md-6">
+                                <label class="form-label">Pickup Location</label>
+                                <select id="pickupLocation" class="form-select" required>
+                                    <option value="">Select pickup location</option>
+                                </select>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label">Delivery Location</label>
+                                <select id="deliveryLocation" class="form-select" required>
+                                    <option value="">Select delivery location</option>
+                                </select>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label">Product Type</label>
+                                <select id="deliveryProductType" class="form-select" required>
+                                    <option value="vegetables">Vegetables</option>
+                                    <option value="fruits">Fruits</option>
+                                    <option value="grains">Grains</option>
+                                    <option value="dairy">Dairy</option>
+                                </select>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label">Estimated Weight (kg)</label>
+                                <input type="number" class="form-control" id="deliveryWeight" min="1" required>
+                            </div>
+                            <div class="col-12">
+                                <label class="form-label">Special Instructions</label>
+                                <textarea class="form-control" id="specialInstructions" rows="3"></textarea>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="urgentDelivery">
+                                    <label class="form-check-label" for="urgentDelivery">
+                                        Mark as urgent (additional charges apply)
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mt-4">
+                            <button type="submit" class="btn btn-success w-100">
+                                <i class="fas fa-truck-fast me-2"></i> Confirm Booking
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Track Shipment Modal -->
     <div class="modal fade" id="trackShipmentModal" tabindex="-1">
         <div class="modal-dialog modal-lg">
@@ -242,10 +284,10 @@
                 </div>
                 <div class="modal-body">
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Enter Shipment ID (e.g. SH-123456)">
-                        <button class="btn btn-success">Track</button>
+                        <input type="text" id="trackingNumberInput" class="form-control" placeholder="Enter Shipment ID (e.g. SH-123456)">
+                        <button id="trackShipmentBtn" class="btn btn-success">Track</button>
                     </div>
-                    <div class="tracking-result text-center py-4">
+                    <div id="trackingResult" class="tracking-result text-center py-4">
                         <img src="Images/tracking-illustration.png" width="200" class="mb-3">
                         <p>Enter your shipment ID to view real-time location and ETA</p>
                     </div>
@@ -259,6 +301,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/socket.io-client@4.7.2/dist/socket.io.min.js"></script>
     <script src="JavaScript/script.js"></script>
     <script src="JavaScript/logistics.js"></script>
 </body>
